[package]
name = "typ-utils"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
ciborium = "0.2.2"
lalrpop-util = "0.23.1"
polyfit = { version = "0.10.2", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
sertyp = { git = "https://github.com/Akari202/sertyp", version = "0.1.2" }
# sertyp = { path = "../sertyp/rust/", version = "0.1.2" }
wasm-minimal-protocol = "0.1.0"

[build-dependencies]
lalrpop = "0.23.1"

[profile.dev]
opt-level = "z"
debug = false
strip = true
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
opt-level = "z"
strip = true
lto = true
panic = "abort"
codegen-units = 1
